Finish layout and routes

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>Ruby on Rails Tutorial | Contact</h1>
+<% provide(:title, 'Contact')%>
+<h1>Contact</h1>
 <p>This is the sample page Contact</p>
